--- a/css/prototipo.css
+++ b/css/prototipo.css
@@ -23,3 +23,35 @@
   -webkit-box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
   background: #fff; }
+
+.margin{
+    margin-top:20px;    
+    margin-bottom:20px;
+}
+
+.themeBtn {
+    background: #ff5c00;
+    color: #ffffff !important;
+    display: inline-block;
+    font-size: 15px;
+    font-weight: 500;
+    height: 50px;
+    line-height: 0.8;
+    padding: 18px 30px;
+    text-transform: capitalize;
+    border-radius: 1px;
+    letter-spacing: 0.5px;
+	border:0px !important;
+	cursor:pointer;
+	border-radius:100px;
+
+}
+a:hover{
+    color: #ffffff;
+    text-decoration:none;
+}
+.themeBtn:hover {
+    background: rgb(255, 92, 0);
+    color: #ffffff;
+    box-shadow: 0 10px 25px -2px rgba(255, 92, 0, 0.6);
+}
